--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   },
   "proxy": "http://localhost:8080",
   "scripts": {
+    "dev": "react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
+    
   },
   "eslintConfig": {
     "extends": "react-app"
